# borentia

./: CMakeLists.txt  README.md  README.txt
anim/: mort.txt
anim/combat/: lancerpotion.txt  utiliserpotion.txt
main/: introgame.txt  leavegame.txt  mainmenu.txt  newgame.txt  returnmain.txt
main/boss/: Cerf.txt  Cobra.txt  Scorpion.txt  Solinus.txt
main/game/: boutique0.txt  boutique1.txt  boutique2.txt  boutique3.txt  pasargent.txt
main/mob/: Araigné.txt  Cerbère.txt  Dragon.txt  Golem.txt  Gorille.txt  Lézard.txt  Mookie poco.txt  Moustique.txt  Panthère.txt  Vautour.txt  Vipère.txt  loup.txt
main/option/: coloroptionmenu.txt  optionmenu.txt
save/: save1.txt
src/: Affichagetxt.cpp  Affichagetxt.h  main.cpp
text/: Ami.txt  End.txt  Fin.txt  boss1.txt  boss2.txt  boss3.txt  hist1.txt
